--- a/sample/Waystone.Sample.Api/Waystone.Sample.Api.csproj
+++ b/sample/Waystone.Sample.Api/Waystone.Sample.Api.csproj
@@ -5,12 +5,13 @@
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
         <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+        <GenerateDocumentationFile>true</GenerateDocumentationFile>
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\..\src\Waystone.Common.Api\Waystone.Common.Api.csproj" />
-      <ProjectReference Include="..\Waystone.Sample.Application\Waystone.Sample.Application.csproj" />
-      <ProjectReference Include="..\Waystone.Sample.Infrastructure\Waystone.Sample.Infrastructure.csproj" />
+        <ProjectReference Include="..\..\src\Waystone.Common.Api\Waystone.Common.Api.csproj" />
+        <ProjectReference Include="..\Waystone.Sample.Application\Waystone.Sample.Application.csproj" />
+        <ProjectReference Include="..\Waystone.Sample.Infrastructure\Waystone.Sample.Infrastructure.csproj" />
     </ItemGroup>
 
 </Project>
