--- a/sample/Waystone.Sample.Application/Waystone.Sample.Application.csproj
+++ b/sample/Waystone.Sample.Application/Waystone.Sample.Application.csproj
@@ -4,11 +4,12 @@
         <TargetFramework>net6.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <GenerateDocumentationFile>true</GenerateDocumentationFile>
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\..\src\Waystone.Common.Application\Waystone.Common.Application.csproj" />
-      <ProjectReference Include="..\Waystone.Sample.Domain\Waystone.Sample.Domain.csproj" />
+        <ProjectReference Include="..\..\src\Waystone.Common.Application\Waystone.Common.Application.csproj" />
+        <ProjectReference Include="..\Waystone.Sample.Domain\Waystone.Sample.Domain.csproj" />
     </ItemGroup>
 
 </Project>
