--- a/src/Waystone.Common.Api/Waystone.Common.Api.csproj
+++ b/src/Waystone.Common.Api/Waystone.Common.Api.csproj
@@ -22,6 +22,7 @@
         <PackageReference Include="Serilog.AspNetCore" Version="5.0.0" />
         <PackageReference Include="Serilog.Filters.Expressions" Version="2.1.0" />
         <PackageReference Include="Serilog.Sinks.Seq" Version="5.1.1" />
+        <PackageReference Include="ZymLabs.NSwag.FluentValidation.AspNetCore" Version="0.5.1" />
     </ItemGroup>
 
 </Project>
