--- a/src/Waystone.Common.Application.Contracts/Waystone.Common.Application.Contracts.csproj
+++ b/src/Waystone.Common.Application.Contracts/Waystone.Common.Application.Contracts.csproj
@@ -11,6 +11,7 @@
         <PackageReference Include="AutoMapper" Version="11.0.1" />
         <PackageReference Include="FluentValidation.AspNetCore" Version="11.0.2" />
         <PackageReference Include="MediatR" Version="10.0.1" />
+        <PackageReference Include="ZymLabs.NSwag.FluentValidation" Version="0.5.1" />
     </ItemGroup>
 
     <ItemGroup>
