--- a/GitVersion.yml
+++ b/GitVersion.yml
@@ -5,7 +5,10 @@ minor-version-bump-message: "^(feat)(\\([\\w\\s-]*\\))?:"
 patch-version-bump-message: "^(build|chore|ci|docs|fix|perf|refactor|revert|style|test)(\\([\\w\\s-]*\\))?:"
 no-bump-message: "^(build|chore|ci|docs|style|test)(\\([\\w\\s-]*\\))?:"
 commit-message-incrementing: MergeMessageOnly
-branches: {}
-ignore:
-  sha: []
-merge-message-formats: {}
+branches:
+  pull-request:
+    tag: pr
+  release:
+    tag: rc
+  develop:
+    tag: alpha
