--- a/src/Waystone.Common.Application/Waystone.Common.Application.csproj
+++ b/src/Waystone.Common.Application/Waystone.Common.Application.csproj
@@ -5,11 +5,20 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <GenerateDocumentationFile>true</GenerateDocumentationFile>
+        <Title>Waystone.Common.Application</Title>
+        <Description>The foundational code required to create .NET 6 Clean Architecture Application layer projects for Draekien Industries.</Description>
+        <IncludeSymbols>true</IncludeSymbols>
+        <SymbolPackageFormat>snupkg</SymbolPackageFormat>
+        <Copyright>Draekien Industries</Copyright>
+        <PackageLicenseExpression>MIT</PackageLicenseExpression>
+        <RepositoryType>git</RepositoryType>
+        <RepositoryUrl>https://github.com/draekien-industries/waystone-common</RepositoryUrl>
+        <PackageProjectUrl>https://github.com/draekien-industries/waystone-common</PackageProjectUrl>
     </PropertyGroup>
 
     <ItemGroup>
         <ProjectReference Include="..\Waystone.Common.Application.Contracts\Waystone.Common.Application.Contracts.csproj" />
-        <ProjectReference Include="..\Waystone.Common.Domain\Waystone.Common.Domain.csproj" />
+
     </ItemGroup>
 
     <ItemGroup>
