--- a/src/Waystone.Common.Infrastructure/Waystone.Common.Infrastructure.csproj
+++ b/src/Waystone.Common.Infrastructure/Waystone.Common.Infrastructure.csproj
@@ -5,10 +5,19 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <GenerateDocumentationFile>true</GenerateDocumentationFile>
+        <Title>Waystone.Common.Infrastructure</Title>
+        <Description>The foundational code required to create .NET 6 Clean Architecture Infrastructure layer projects for Draekien Industries.</Description>
+        <IncludeSymbols>true</IncludeSymbols>
+        <SymbolPackageFormat>snupkg</SymbolPackageFormat>
+        <Copyright>Draekien Industries</Copyright>
+        <PackageLicenseExpression>MIT</PackageLicenseExpression>
+        <RepositoryType>git</RepositoryType>
+        <RepositoryUrl>https://github.com/draekien-industries/waystone-common</RepositoryUrl>
+        <PackageProjectUrl>https://github.com/draekien-industries/waystone-common</PackageProjectUrl>
     </PropertyGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\Waystone.Common.Application\Waystone.Common.Application.csproj" />
+        <ProjectReference Include="..\Waystone.Common.Application.Contracts\Waystone.Common.Application.Contracts.csproj" />
         <ProjectReference Include="..\Waystone.Common.Infrastructure.Contracts\Waystone.Common.Infrastructure.Contracts.csproj" />
     </ItemGroup>
 
