--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -62,3 +62,68 @@ jobs:
           echo "CommitsSinceVersionSourcePadded: ${{ steps.gitversion.outputs.commitsSinceVersionSourcePadded }}"
           echo "UncommittedChanges: ${{ steps.gitversion.outputs.uncommittedChanges }}"
           echo "CommitDate: ${{ steps.gitversion.outputs.commitDate }}"
+
+  build-and-test:
+    name: Build and run tests
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2.4.2
+      
+      - name: Setup .NET Core 6
+        uses: actions/setup-dotnet@v2
+        with:
+          dotnet-version: '6.x'
+          include-prerelease: true
+      
+      - name: Restore
+        run: dotnet restore
+
+      - name: Build
+        run: dotnet build --configuration Release --no-restore
+
+      - name: Test
+        run: dotnet test --no-restore --verbosity normal /p:CollectCoverage=true /p:CoverletOutputFormat=opencover
+
+  publish:
+    name: Publish
+    runs-on: ubuntu-latest
+    needs:
+      - calculate-version
+      - build-and-test
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2.4.2
+
+      - name: Setup .NET Core 6
+        uses: actions/setup-dotnet@v2
+        with:
+          dotnet-version: '6.x'
+          include-prerelease: true
+      
+      - name: Restore
+        working-directory: src
+        run: |
+          dotnet restore Waystone.Common.Api
+          dotnet restore Waystone.Common.Application          
+          dotnet restore Waystone.Common.Infrastructure
+
+      - name: Build
+        working-directory: src
+        run: |
+          dotnet build Waystone.Common.Api -c Release --no-restore
+          dotnet build Waystone.Common.Application -c Release --no-restore
+          dotnet build Waystone.Common.Infrastructure -c Release --no-restore
+
+      - name: Pack
+        working-directory: src
+        run: |
+          dotnet pack Waystone.Common.Api -c Release --no-restore -o out -p:PackageVersion=${{ needs.calculate-version.outputs.semVer }}
+          dotnet pack Waystone.Common.Application -c Release --no-restore -o out -p:PackageVersion=${{ needs.calculate-version.outputs.semVer }}
+          dotnet pack Waystone.Common.Application.Contracts -c Release --no-restore -o out -p:PackageVersion=${{ needs.calculate-version.outputs.semVer }}
+          dotnet pack Waystone.Common.Infrastructure -c Release --no-restore -o out -p:PackageVersion=${{ needs.calculate-version.outputs.semVer }}
+          dotnet pack Waystone.Common.Infrastructure.Contracts -c Release --no-restore -o out -p:PackageVersion=${{ needs.calculate-version.outputs.semVer }}
+        
+      - name: Publish
+        working-directory: src
+        run: dotnet nuget push ./out/*.nupkg --skip-duplicate --api-key ${{ secrets.NUGET_API_KEY }}
