--- a/src/Waystone.Common.Application.Contracts/Waystone.Common.Application.Contracts.csproj
+++ b/src/Waystone.Common.Application.Contracts/Waystone.Common.Application.Contracts.csproj
@@ -5,6 +5,15 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <GenerateDocumentationFile>true</GenerateDocumentationFile>
+        <Title>Waystone.Common.Application.Contracts</Title>
+        <Description>The contracts required to create .NET 6 Clean Architecture Application layer projects for Draekien Industries.</Description>
+        <IncludeSymbols>true</IncludeSymbols>
+        <SymbolPackageFormat>snupkg</SymbolPackageFormat>
+        <Copyright>Draekien Industries</Copyright>
+        <PackageLicenseExpression>MIT</PackageLicenseExpression>
+        <RepositoryType>git</RepositoryType>
+        <RepositoryUrl>https://github.com/draekien-industries/waystone-common</RepositoryUrl>
+        <PackageProjectUrl>https://github.com/draekien-industries/waystone-common</PackageProjectUrl>
     </PropertyGroup>
 
     <ItemGroup>
@@ -12,10 +21,6 @@
         <PackageReference Include="FluentValidation.AspNetCore" Version="11.0.2" />
         <PackageReference Include="MediatR" Version="10.0.1" />
         <PackageReference Include="ZymLabs.NSwag.FluentValidation" Version="0.5.1" />
-    </ItemGroup>
-
-    <ItemGroup>
-        <ProjectReference Include="..\Waystone.Common.Domain.Contracts\Waystone.Common.Domain.Contracts.csproj" />
     </ItemGroup>
 
 </Project>
