--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -127,3 +127,14 @@ jobs:
       - name: Publish
         working-directory: src
         run: dotnet nuget push ./out/*.nupkg --skip-duplicate --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json
+
+      - name: Release
+        uses: anton-yurchenko/git-release@v4.2.2
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          PRE_RELEASE: true
+          CHANGELOG_FILE: none
+          RELEASE_NAME: ${{ needs.calculate-version.outputs.semVer }}
+          RELEASE_NAME_PREFIX: "Pre-Release: "
+        with:
+          args: src/out/*.nupkg
