--- a/.github/workflows/alpha-release.yml
+++ b/.github/workflows/alpha-release.yml
@@ -1,9 +1,9 @@
-name: Release
+name: PR
 
 on:
   push:
     branches:
-      - main
+      - develop
     paths:
       - 'src/**'
 
@@ -130,7 +130,7 @@ jobs:
       - name: Publish
         working-directory: src
         run: dotnet nuget push ./out/*.nupkg --skip-duplicate --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json
-
+        
   create-release:
     name: Create GitHub Release
     runs-on: ubuntu-latest
@@ -154,5 +154,6 @@ jobs:
         uses: ncipollo/release-action@v1
         with:
           tag: ${{ steps.tag_version.outputs.new_tag }}
-          name: "Release: ${{ steps.tag_version.outputs.new_tag }}"
+          name: "Alpha: ${{ steps.tag_version.outputs.new_tag }}"
           generateReleaseNotes: true
+          prerelease: true
