--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,8 +1,11 @@
-name: PR
+name: Release
 
 on:
-  pull_request:
-    branches: [ main ]
+  push:
+    branches:
+      - main
+    paths:
+      - 'src/**'
 
 jobs:
   calculate-version:
@@ -127,3 +130,29 @@ jobs:
       - name: Publish
         working-directory: src
         run: dotnet nuget push ./out/*.nupkg --skip-duplicate --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json
+
+  create-release:
+    name: Create GitHub Release
+    runs-on: ubuntu-latest
+    needs:
+      - calculate-version
+      - publish
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2.4.2
+        with:
+          fetch-depth: 0
+      
+      - name: Bump version and push tag
+        id: tag_version
+        uses: mathieudutour/github-tag-action@v6.0
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          custom_tag: ${{ needs.calculate-version.outputs.semVer }}
+        
+      - name: Create release
+        uses: ncipollo/release-action@v1
+        with:
+          tag: ${{ steps.tag_version.outputs.new_tag }}
+          name: "Release: ${{ steps.tag_version.outputs.new_tag }}"
+          generateReleaseNotes: true
