--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -1,8 +1,11 @@
-name: PR
+name: Verify Pull Request
 
 on:
   pull_request:
-    branches: [ main ]
+    branches:
+      - main
+      - develop
+      - 'release/**'
     paths:
       - 'src/**'
       - '.github/workflows/pull-request.yml'
