--- a/.github/workflows/alpha-release.yml
+++ b/.github/workflows/alpha-release.yml
@@ -1,5 +1,9 @@
 name: Publish Alpha
 
+concurrency:
+  group: alpha
+  cancel-in-progress: true
+
 on:
   push:
     branches:
@@ -88,8 +92,9 @@ jobs:
       - name: Test
         run: dotnet test --no-restore --verbosity normal /p:CollectCoverage=true /p:CoverletOutputFormat=opencover
 
-  publish:
-    name: Publish
+  deployment:
+    name: deployment
+    environment: alpha
     runs-on: ubuntu-latest
     needs:
       - calculate-version
@@ -111,14 +116,14 @@ jobs:
           dotnet restore Waystone.Common.Application          
           dotnet restore Waystone.Common.Infrastructure
 
-      - name: Build
+      - name: build
         working-directory: src
         run: |
           dotnet build Waystone.Common.Api -c Release --no-restore
           dotnet build Waystone.Common.Application -c Release --no-restore
           dotnet build Waystone.Common.Infrastructure -c Release --no-restore
 
-      - name: Pack
+      - name: pack
         working-directory: src
         run: |
           dotnet pack Waystone.Common.Api -c Release --no-restore -o out -p:PackageVersion=${{ needs.calculate-version.outputs.semVer }}
@@ -127,7 +132,7 @@ jobs:
           dotnet pack Waystone.Common.Infrastructure -c Release --no-restore -o out -p:PackageVersion=${{ needs.calculate-version.outputs.semVer }}
           dotnet pack Waystone.Common.Infrastructure.Contracts -c Release --no-restore -o out -p:PackageVersion=${{ needs.calculate-version.outputs.semVer }}
         
-      - name: Publish
+      - name: deploy
         working-directory: src
         run: dotnet nuget push ./out/*.nupkg --skip-duplicate --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json
         
@@ -136,21 +141,21 @@ jobs:
     runs-on: ubuntu-latest
     needs:
       - calculate-version
-      - publish
+      - deployment
     steps:
-      - name: Checkout
+      - name: checkout
         uses: actions/checkout@v2.4.2
         with:
           fetch-depth: 0
       
-      - name: Bump version and push tag
+      - name: bump version and push tag
         id: tag_version
         uses: mathieudutour/github-tag-action@v6.0
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           custom_tag: ${{ needs.calculate-version.outputs.semVer }}
         
-      - name: Create release
+      - name: create release
         uses: ncipollo/release-action@v1
         with:
           tag: ${{ steps.tag_version.outputs.new_tag }}
