ci: update github actions for deployments (#3)
* ci: update github action names

* ci: use github environments and deployments

* ci: remove paths filter on pull request action

* ci: add workflow dispatch trigger to release actions

--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -1,11 +1,11 @@
-name: PR
+name: Verify Pull Request
 
 on:
   pull_request:
-    branches: [ main ]
-    paths:
-      - 'src/**'
-      - '.github/workflows/pull-request.yml'
+    branches:
+      - main
+      - develop
+      - 'release/**'
 
 jobs:
   build-and-test:
