--- a/.github/workflows/rc-release.yml
+++ b/.github/workflows/rc-release.yml
@@ -1,6 +1,11 @@
-name: PR
+name: Publish Release Candidate
+
+concurrency:
+  group: beta
+  cancel-in-progress: true
 
 on:
+  workflow_dispatch:    
   push:
     branches:
       - 'release/**'
@@ -88,8 +93,9 @@ jobs:
       - name: Test
         run: dotnet test --no-restore --verbosity normal /p:CollectCoverage=true /p:CoverletOutputFormat=opencover
 
-  publish:
-    name: Publish
+  deployment:
+    name: deployment
+    environment: beta
     runs-on: ubuntu-latest
     needs:
       - calculate-version
@@ -127,7 +133,7 @@ jobs:
           dotnet pack Waystone.Common.Infrastructure -c Release --no-restore -o out -p:PackageVersion=${{ needs.calculate-version.outputs.semVer }}
           dotnet pack Waystone.Common.Infrastructure.Contracts -c Release --no-restore -o out -p:PackageVersion=${{ needs.calculate-version.outputs.semVer }}
         
-      - name: Publish
+      - name: deploy
         working-directory: src
         run: dotnet nuget push ./out/*.nupkg --skip-duplicate --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json
         
@@ -136,7 +142,7 @@ jobs:
     runs-on: ubuntu-latest
     needs:
       - calculate-version
-      - publish
+      - deployment
     steps:
       - name: Checkout
         uses: actions/checkout@v2.4.2
