feat(api): add packable readme for nuget package

--- a/src/Waystone.Common.Api/Waystone.Common.Api.csproj
+++ b/src/Waystone.Common.Api/Waystone.Common.Api.csproj
@@ -14,7 +14,12 @@
         <RepositoryType>git</RepositoryType>
         <RepositoryUrl>https://github.com/draekien-industries/waystone-common</RepositoryUrl>
         <PackageProjectUrl>https://github.com/draekien-industries/waystone-common</PackageProjectUrl>
+        <PackageReadmeFile>README.md</PackageReadmeFile>
     </PropertyGroup>
+
+    <ItemGroup>
+        <None Include="README.md" Pack="true" />
+    </ItemGroup>
 
     <ItemGroup>
         <FrameworkReference Include="Microsoft.AspNetCore.App" />
