--- a/src/Waystone.Common.Application/Waystone.Common.Application.csproj
+++ b/src/Waystone.Common.Application/Waystone.Common.Application.csproj
@@ -14,11 +14,15 @@
         <RepositoryType>git</RepositoryType>
         <RepositoryUrl>https://github.com/draekien-industries/waystone-common</RepositoryUrl>
         <PackageProjectUrl>https://github.com/draekien-industries/waystone-common</PackageProjectUrl>
+        <PackageReadmeFile>README.md</PackageReadmeFile>
     </PropertyGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\Waystone.Common.Application.Contracts\Waystone.Common.Application.Contracts.csproj" />
+        <None Include="README.md" Pack="true" />
+    </ItemGroup>
 
+    <ItemGroup>
+        <ProjectReference Include="..\Waystone.Common.Application.Contracts\Waystone.Common.Application.Contracts.csproj" />
     </ItemGroup>
 
     <ItemGroup>
