feat: create domain contracts class library

--- a/sample/Waystone.Sample.Domain/Waystone.Sample.Domain.csproj
+++ b/sample/Waystone.Sample.Domain/Waystone.Sample.Domain.csproj
@@ -6,4 +6,8 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\..\src\Waystone.Common.Domain.Contracts\Waystone.Common.Domain.Contracts.csproj" />
+    </ItemGroup>
+
 </Project>
