--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,18 +24,18 @@ jobs:
         uses: actions/checkout@v2.4.2
         with:
           fetch-depth: 0
-      
+
       - name: Install GitVersion
         uses: gittools/actions/gitversion/setup@v0.9.7
         with:
           versionSpec: '5.x'
-      
+
       - name: Determine Version
         id: gitversion
         uses: gittools/actions/gitversion/execute@v0.9.7
         with:
           useConfigFile: true
-        
+
       - name: Display GItVersion outputs
         run: |
           echo "Major: ${{ steps.gitversion.outputs.major }}"
@@ -77,13 +77,13 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2.4.2
-      
+
       - name: Setup .NET Core 6
         uses: actions/setup-dotnet@v2
         with:
           dotnet-version: '6.x'
           include-prerelease: true
-      
+
       - name: Restore
         run: dotnet restore
 
@@ -109,7 +109,7 @@ jobs:
         with:
           dotnet-version: '6.x'
           include-prerelease: true
-      
+
       - name: Restore
         working-directory: src
         run: |
@@ -130,9 +130,10 @@ jobs:
           dotnet pack Waystone.Common.Api -c Release --no-restore -o out -p:PackageVersion=${{ needs.calculate-version.outputs.semVer }}
           dotnet pack Waystone.Common.Application -c Release --no-restore -o out -p:PackageVersion=${{ needs.calculate-version.outputs.semVer }}
           dotnet pack Waystone.Common.Application.Contracts -c Release --no-restore -o out -p:PackageVersion=${{ needs.calculate-version.outputs.semVer }}
+          dotnet pack Waystone.Common.Domain.Contracts -c Release --no-restore -o out -p:PackageVersion=${{ needs.calculate-version.outputs.semVer }}
           dotnet pack Waystone.Common.Infrastructure -c Release --no-restore -o out -p:PackageVersion=${{ needs.calculate-version.outputs.semVer }}
           dotnet pack Waystone.Common.Infrastructure.Contracts -c Release --no-restore -o out -p:PackageVersion=${{ needs.calculate-version.outputs.semVer }}
-        
+
       - name: deploy
         working-directory: src
         run: dotnet nuget push ./out/*.nupkg --skip-duplicate --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json
@@ -148,14 +149,14 @@ jobs:
         uses: actions/checkout@v2.4.2
         with:
           fetch-depth: 0
-      
+
       - name: Bump version and push tag
         id: tag_version
         uses: mathieudutour/github-tag-action@v6.0
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           custom_tag: ${{ needs.calculate-version.outputs.semVer }}
-        
+
       - name: Create release
         uses: ncipollo/release-action@v1
         with:
