--- a/src/Waystone.Common.Api/Waystone.Common.Api.csproj
+++ b/src/Waystone.Common.Api/Waystone.Common.Api.csproj
@@ -33,6 +33,7 @@
         <PackageReference Include="Hellang.Middleware.ProblemDetails" Version="6.4.2" />
         <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="6.0.6" />
         <PackageReference Include="NSwag.AspNetCore" Version="13.16.1" />
+        <PackageReference Include="OpenTelemetry.Exporter.Console" Version="1.3.0" />
         <PackageReference Include="Serilog.AspNetCore" Version="5.0.0" />
         <PackageReference Include="Serilog.Filters.Expressions" Version="2.1.0" />
         <PackageReference Include="Serilog.Sinks.Seq" Version="5.1.1" />
