--- a/src/Waystone.Common.Infrastructure/Waystone.Common.Infrastructure.csproj
+++ b/src/Waystone.Common.Infrastructure/Waystone.Common.Infrastructure.csproj
@@ -26,4 +26,8 @@
         <ProjectReference Include="..\Waystone.Common.Infrastructure.Contracts\Waystone.Common.Infrastructure.Contracts.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="6.0.6" />
+    </ItemGroup>
+
 </Project>
