--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -28,6 +28,8 @@ jobs:
         run: dotnet build --configuration Release --no-restore
 
       - name: Test
+        env:
+          ASPNETCORE_ENVIRONMENT: Test
         run: dotnet test --no-restore --collect:"XPlat Code Coverage"
 
       - name: Codecov
