--- a/src/Waystone.Common.Infrastructure/Waystone.Common.Infrastructure.csproj
+++ b/src/Waystone.Common.Infrastructure/Waystone.Common.Infrastructure.csproj
@@ -27,7 +27,13 @@
     </ItemGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="6.0.6" />
+        <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="6.0.6" />
+    </ItemGroup>
+
+    <ItemGroup>
+        <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
+            <_Parameter1>Waystone.Common.Infrastructure.UnitTests</_Parameter1>
+        </AssemblyAttribute>
     </ItemGroup>
 
 </Project>
