feat(sample): update sample to be eShopOnContainers like

--- a/test/Waystone.Sample.Api.IntegrationTests/Waystone.Sample.Api.IntegrationTests.csproj
+++ b/test/Waystone.Sample.Api.IntegrationTests/Waystone.Sample.Api.IntegrationTests.csproj
@@ -29,4 +29,8 @@
       <ProjectReference Include="..\..\sample\Waystone.Sample.Api\Waystone.Sample.Api.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Controllers" />
+    </ItemGroup>
+
 </Project>
