--- a/sample/Waystone.Sample.Application/Waystone.Sample.Application.csproj
+++ b/sample/Waystone.Sample.Application/Waystone.Sample.Application.csproj
@@ -11,4 +11,8 @@
         <ProjectReference Include="..\Waystone.Sample.Domain\Waystone.Sample.Domain.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.1" />
+    </ItemGroup>
+
 </Project>
