--- a/sample/Waystone.Sample.Infrastructure/Waystone.Sample.Infrastructure.csproj
+++ b/sample/Waystone.Sample.Infrastructure/Waystone.Sample.Infrastructure.csproj
@@ -11,4 +11,13 @@
         <ProjectReference Include="..\Waystone.Sample.Application\Waystone.Sample.Application.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="7.0.1" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.1" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Migrations" />
+    </ItemGroup>
+
 </Project>
