--- a/sample/Waystone.Sample.Infrastructure/Waystone.Sample.Infrastructure.csproj
+++ b/sample/Waystone.Sample.Infrastructure/Waystone.Sample.Infrastructure.csproj
@@ -12,12 +12,17 @@
     </ItemGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="7.0.1" />
-      <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.1" />
+        <InternalsVisibleTo Include="Waystone.Sample.Api.IntegrationTests" />
+    </ItemGroup>
+
+
+    <ItemGroup>
+        <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="7.0.1" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.1" />
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="Migrations" />
+        <Folder Include="Migrations" />
     </ItemGroup>
 
 </Project>
