--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -6,10 +6,11 @@ concurrency:
 
 on:
   workflow_dispatch:
-  branches:
-    - main
-  paths:
-    - "src/**"
+  push:
+    branches:
+      - main
+    paths:
+      - "src/**"
 
 jobs:
   build-and-scan:
