refactor(domain): move non contract code into domain library

--- a/sample/Waystone.Sample.Domain/Waystone.Sample.Domain.csproj
+++ b/sample/Waystone.Sample.Domain/Waystone.Sample.Domain.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\..\src\Waystone.Common.Domain.Contracts\Waystone.Common.Domain.Contracts.csproj" />
+      <ProjectReference Include="..\..\src\Waystone.Common.Domain\Waystone.Common.Domain.csproj" />
     </ItemGroup>
 
 </Project>
