--- a/src/Waystone.Common.Application.Contracts/Waystone.Common.Application.Contracts.csproj
+++ b/src/Waystone.Common.Application.Contracts/Waystone.Common.Application.Contracts.csproj
@@ -22,6 +22,7 @@
 
     <ItemGroup>
         <ProjectReference Include="..\Waystone.Common.Domain.Contracts\Waystone.Common.Domain.Contracts.csproj" />
+        <ProjectReference Include="..\Waystone.Common.Domain\Waystone.Common.Domain.csproj" />
     </ItemGroup>
 
 </Project>
