--- a/src/Waystone.Common.Api/Waystone.Common.Api.csproj
+++ b/src/Waystone.Common.Api/Waystone.Common.Api.csproj
@@ -19,6 +19,7 @@
 
     <ItemGroup>
         <ProjectReference Include="..\Waystone.Common.Application.Contracts\Waystone.Common.Application.Contracts.csproj" />
+        <ProjectReference Include="..\Waystone.Common.Domain\Waystone.Common.Domain.csproj" />
     </ItemGroup>
 
     <ItemGroup>
