--- a/src/Waystone.Common.Domain/Waystone.Common.Domain.csproj
+++ b/src/Waystone.Common.Domain/Waystone.Common.Domain.csproj
@@ -10,4 +10,11 @@
       <ProjectReference Include="..\Waystone.Common.Domain.Contracts\Waystone.Common.Domain.Contracts.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <None Update="README.md">
+        <Pack>true</Pack>
+        <PackagePath>\</PackagePath>
+      </None>
+    </ItemGroup>
+
 </Project>
