ci(alpha): include domain project

--- a/.github/workflows/alpha-release.yml
+++ b/.github/workflows/alpha-release.yml
@@ -121,7 +121,8 @@ jobs:
         working-directory: src
         run: |
           dotnet restore Waystone.Common.Api
-          dotnet restore Waystone.Common.Application          
+          dotnet restore Waystone.Common.Application
+          dotnet restore Waystone.Common.Domain
           dotnet restore Waystone.Common.Infrastructure
 
       - name: build
@@ -129,6 +130,7 @@ jobs:
         run: |
           dotnet build Waystone.Common.Api -c Release --no-restore
           dotnet build Waystone.Common.Application -c Release --no-restore
+          dotnet build Waystone.Common.Domain -c Release --no-restore
           dotnet build Waystone.Common.Infrastructure -c Release --no-restore
 
       - name: pack
@@ -137,6 +139,7 @@ jobs:
           dotnet pack Waystone.Common.Api -c Release --no-restore -o out -p:PackageVersion=${{ needs.calculate-version.outputs.semVer }}
           dotnet pack Waystone.Common.Application -c Release --no-restore -o out -p:PackageVersion=${{ needs.calculate-version.outputs.semVer }}
           dotnet pack Waystone.Common.Application.Contracts -c Release --no-restore -o out -p:PackageVersion=${{ needs.calculate-version.outputs.semVer }}
+          dotnet pack Waystone.Common.Domain -c Release --no-restore -o out -p:PackageVersion=${{ needs.calculate-version.outputs.semVer }}
           dotnet pack Waystone.Common.Domain.Contracts -c Release --no-restore -o out -p:PackageVersion=${{ needs.calculate-version.outputs.semVer }}
           dotnet pack Waystone.Common.Infrastructure -c Release --no-restore -o out -p:PackageVersion=${{ needs.calculate-version.outputs.semVer }}
           dotnet pack Waystone.Common.Infrastructure.Contracts -c Release --no-restore -o out -p:PackageVersion=${{ needs.calculate-version.outputs.semVer }}
