--- a/test/Directory.Build.props
+++ b/test/Directory.Build.props
@@ -2,4 +2,12 @@
     <PropertyGroup>
         <GenerateDocumentationFile>false</GenerateDocumentationFile>
     </PropertyGroup>
+
+    <ItemGroup>
+        <PackageReference Include="AutoFixture.AutoNSubstitute" Version="4.17.0" />
+        <PackageReference Include="AutoFixture.Xunit2" Version="4.17.0" />
+        <PackageReference Include="FluentAssertions" Version="6.7.0" />
+        <PackageReference Include="NSubstitute" Version="4.4.0" />
+        <PackageReference Include="xunit" Version="2.4.1" />
+    </ItemGroup>
 </Project>
